--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Archinime</title>
-  <link rel="icon" href="Logo_Archinime.png" type="image/png">
+  <link rel="icon" href="Logo_Archinime.avif" type="image/png">
   <link rel="preload" as="image" href="videoframe.jpg">
 
   <style>
@@ -21,7 +21,7 @@
 
     /* Fondo */
     #bg-video{position:fixed; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:-2; opacity:0; transition:opacity .6s ease; background:#000; pointer-events:none;}
-    #overlay{position:fixed; top:0; left:0; width:100%; height:100%; z-index:-1; background: url('galaxia-poster.jpg') center/cover no-repeat, linear-gradient(180deg, rgba(0,0,0,0.25), rgba(0,0,0,0.6)); opacity:1; transition:opacity .6s ease; pointer-events:none;}
+    #overlay{position:fixed; top:0; left:0; width:100%; height:100%; z-index:-1; background: url('galaxia-poster.avif') center/cover no-repeat, linear-gradient(180deg, rgba(0,0,0,0.25), rgba(0,0,0,0.6)); opacity:1; transition:opacity .6s ease; pointer-events:none;}
 
     /* Header: sticky + altura mínima para consistencia */
     header{
@@ -227,14 +227,14 @@
 
   <header>
     <h1>
-      <img id="logo" src="Logo_Archinime.png" alt="Logo Archinime" onclick="location.reload()" title="Recargar página">
+      <img id="logo" src="Logo_Archinime.avif" alt="Logo Archinime" onclick="location.reload()" title="Recargar página">
       Archinime
       <span class="social-inline" id="social-inline" title="Síguenos">
         <button id="youtube-btn" type="button" aria-label="Abrir YouTube en nueva pestaña" onclick="(function(e){ e.stopPropagation(); openInNewTab('https://www.youtube.com/@Archinime-k2g'); })(event)">
-          <img src="youtube.jpg" alt="YouTube">
+          <img src="youtube.avif" alt="YouTube">
         </button>
         <button id="tiktok-btn" type="button" aria-label="Abrir TikTok en nueva pestaña" onclick="(function(e){ e.stopPropagation(); openInNewTab('https://www.tiktok.com/@archinime?_t=ZS-8zGoKE4IqLw&_r=1'); })(event)">
-          <img src="tiktok.jpg" alt="TikTok">
+          <img src="tiktok.avif" alt="TikTok">
         </button>
       </span>
     </h1>
