--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
         <option>Comedia oscura</option>
         <option>Cosplay</option>
         <option>Cyberpunk</option>
+        <option>Deducción Social</option>
         <option>Deportivo</option>
         <option>Dibujo Animado</option>
         <option>Divulgación Científica</option>
@@ -288,6 +289,7 @@
         <option>Reverse Harem</option>
         <option>Romance</option>
         <option>Romance escolar</option>
+        <option>RPG</option>
         <option>Slice of Life</option>
         <option>Sobrenatural</option>
         <option>Steampunk</option>
@@ -416,7 +418,7 @@
       {id:40, title:"One Punch-Man", aliases: ["One-Punch Man"], img:"onepunch.avif", rating:4.8, genres:["Comedia","Acción","Fantasía","Ciencia ficción","Superhéroes","Seinen"]},
       {id:41, title:"Mashle", aliases: ["Mash Burnedead"], img:"mashle1.avif", rating:4.8, genres:["Comedia","Acción","Fantasía","Aventura","Shōnen"]},
       {id:42, title:"Los Diarios de la Boticaria", aliases: ["Kusuriya no Hitorigoto","The Apothecary Diaries"], img:"maomaot1.avif", rating:4.9, genres:["Drama","Misterio","Romance","Shōjo"]},
-      {id:43, title:"Maplestar", img:"pm.avif", rating:5.0, genres:["Hentai","Animación","Seijin"]},
+      {id:43, title:"Maplestar", img:"pm.avif", rating:4.8, genres:["Hentai","Animación","Seijin"]},
       {id:44, title:"Uzumaki", img:"uzumakii.avif", rating:4.2, genres:["Horror","Seinen"]},
       {id:45, title:"Tondemo Skill de Isekai Hourou Meshi", aliases: ["Campfire Cooking in Another World with My Absurd Skills"], img:"todemo.avif", rating:4.9, genres:["Comedia","Fantasía","Slice of Life","Cocina","Aventura","Shōnen","Isekai"]},
       {id:46, title:"My Dress-Up Darling", aliases: ["Sono Bisque Doll wa Koi wo Suru"], img:"muneca.avif", rating:4.9, genres:["Comedia","Romance","Slice of Life","Escolar","Cosplay","Seinen"]},
@@ -436,6 +438,8 @@
       {id:60, title:"Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka", aliases: ["May I Ask for One Final Thing?"], img:"saigo ni hitotsu.avif", rating:4.7, genres:["Acción","Fantasía","Comedia","Drama","Romance","Shōjo"]},
       {id:61, title:"Ataque a los titanes", aliases: ["Attack on Titan","Shingeki no Kyojin"], img:"synt.avif", rating:4.9, genres:["Acción","Fantasía oscura","Post-apocalíptico","Drama","Misterio","Aventura","Thriller","Shōnen"]},
       {id:62, title:"Record of Ragnarok", aliases: ["Shūmatsu no Valkyrie"], img:"recordpor.avif", rating:4.7, genres:["Acción","Fantasía","Sobrenatural","Drama","Mitología","Survival","Seinen"]},
+      {id:63, title:"Genshin Impact Hentai", aliases: ["Hentai"], img:"gih.avif", rating:5, genres:["Hentai","Fantasía","Tentáculos","Seijin"]},
+      {id:64, title:"Gnosia", img:"gnosiap.avif", rating:4.4, genres:["Ciencia ficción","Drama","Misterio","Thriller","Deducción Social","RPG","Seinen"]},
     ];
 
     /* ----------------------------
