--- a/video-player.html
+++ b/video-player.html
@@ -1864,6 +1864,9 @@
         },
         "14": {
           "1": { link:'https://drive.google.com/file/d/13jJiui7LEtkfp-ERx5Xu3gq7zSLo-09E/preview', link2:'https://www.dropbox.com/scl/fi/zhsdyr8t1pee4b8p4xfms/The-Rising-of-the-Shield-Hero-Maplestar.mp4?rlkey=hu238mo45s3sckdqlucq15xj3&st=62npwezw&raw=1', title:'The Rising of the Shield Hero - Maplestar' },
+        },
+        "15": {
+          "1": { link:'https://drive.google.com/file/d/1DLuNi4WG3-38dz0qCK0CfbTWflmfm1Zr/preview', title:'Demon Slayer' },
         }
       },
       "44": {
@@ -2045,7 +2048,7 @@
           "5": { link: 'https://drive.google.com/file/d/1n_aDJZIlhwYUf2-DxXKSqJ3wSfalI7Wv/preview', title:'Spy × Family T3 Cap 5' },
           "6": { link: 'https://drive.google.com/file/d/16tVbRmoixbYBZhsRAoiPp5hevpvWG_OP/preview', title:'Spy × Family T3 Cap 6' },
           "7": { link: 'https://drive.google.com/file/d/1h8UGkStGKWmxobVXbuPFnq5k-2GuXw9l/preview', title:'Spy × Family T3 Cap 7' },
-          "8": { link: '/preview', title:'Spy × Family T3 Cap 8' },
+          "8": { link: 'https://drive.google.com/file/d/1f5A6tZfGfDr2WRP3rNGk2Jo8fcryyf0o/preview', title:'Spy × Family T3 Cap 8' },
           "9": { link: '/preview', title:'Spy × Family T3 Cap 9' },
           "10": { link: '/preview', title:'Spy × Family T3 Cap 10' },
           "11": { link: '/preview', title:'Spy × Family T3 Cap 11' },
@@ -2243,6 +2246,7 @@
           "3": { link:'https://drive.google.com/file/d/1qT5zJg0WrrWvazqmC8eByOgJWl2hCcoJ/preview', title:'My Hero Academia T8 Cap 3' },
           "4": { link:'https://drive.google.com/file/d/1DeZgMNC9P6-614PHPl8EMt6JHP35PONe/preview', title:'My Hero Academia T8 Cap 4' },
           "5": { link:'https://drive.google.com/file/d/1-IiecYCX0Vwb4cub9dMOmhmAEa6evV-s/preview', title:'My Hero Academia T8 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1WDzq_kVTBOzLad7g9Ai05s4vJrx2LmGq/preview', title:'My Hero Academia T8 Cap 6' },
         }
       },
       "52": {
@@ -2308,6 +2312,7 @@
           "17": { link:'https://drive.google.com/file/d/15J93sUxSY360H4hpANx7YG27VRSvv-mn/preview', title:'Futari Solo Camp T1 Cap 17' },
           "18": { link:'https://drive.google.com/file/d/1ga1442E8p8D_lvleGPyHsI3F1XLM0hJp/preview', title:'Futari Solo Camp T1 Cap 18' },
           "19": { link:'https://drive.google.com/file/d/1iNv6CV05PbPX1_S4aFWhiibJE9ovoP8G/preview', title:'Futari Solo Camp T1 Cap 19' },
+          "20": { link:'https://drive.google.com/file/d/1sPO8g9lkY2HpCTo6Yy1tgHGiNnLtm4_2/preview', title:'Futari Solo Camp T1 Cap 20' },
         }
       },
       "54": {
@@ -2319,6 +2324,7 @@
           "5": { link:'https://drive.google.com/file/d/1LGTe12Pezs-4VVuV4Zkz4XRTeXszP6vv/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 5' },
           "6": { link:'https://drive.google.com/file/d/1H0sq3zKrJxnLIAF_MlmuI1-cUAtom07M/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 6' },
           "7": { link:'https://drive.google.com/file/d/1MXYNnpSIKUMuIr1nVgGVi-aM4Z2DA5Pz/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1cgwwaDUEhG-QBsXgK5anjCw-pb1T8lTO/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 8' },
         }
       },
       "55": {
@@ -2477,6 +2483,7 @@
           "5": { link:'https://drive.google.com/file/d/1EUF_ZSVcR-QGAGYY2PEgaw51XGknfawe/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 5' },
           "6": { link:'https://drive.google.com/file/d/1U5FcxO9X0_iAVY0_J2gwaG3qXEHxODBL/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 6' },
           "7": { link:'https://drive.google.com/file/d/1fbWAiIbXifd_EeWCq-hdxStTNLyGqSiF/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1FPkisn_nCXnA_-bFs_D4EZJyscJSppws/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 8' },
         }
       },
       "60": {
@@ -2492,6 +2499,7 @@
           "9": { link:'https://drive.google.com/file/d/1__0eJzv7551bGYfkMIpMeyH-oCeYMAke/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 9' },
           "10": { link:'https://drive.google.com/file/d/12Rrh0xj85a9WUXEZEARqliEsJfd4IW4Y/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 10' },
           "11": { link:'https://drive.google.com/file/d/1FDWj67l-uIUlXy92JDwREtgS4mF-iS2c/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 11' },
+          "12": { link:'https://drive.google.com/file/d/1XqpWA9VyHLh8wAKfjQYEitdfczD0Q0gZ/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 12' },
         }
       },
       "61": {
@@ -2614,7 +2622,7 @@
           "8": { link:'https://drive.google.com/file/d/17S8ef8BnVuqGQQ7_0-YVtz3VlNfZInEI/preview', title:'Record of Ragnarok T1 Cap 8' },
           "9": { link:'https://drive.google.com/file/d/1JB0BHTA5N0yHqj1ZRoWLzcJvto1pwpCd/preview', title:'Record of Ragnarok T1 Cap 9' },
           "10": { link:'https://drive.google.com/file/d/1P9HcJSwYj0EAuBc9chbgoJzfTBcMzLFf/preview', title:'Record of Ragnarok T1 Cap 10' },
-          "11": { link:'https://drive.google.com/file/d/1YuqsUjlwNUeeJ04qww4FhuGhKF_JkU9y/preview', title:'Record of Ragnarok T1 Cap 11' },
+          "11": { link:'https://drive.google.com/file/d/1PfEp-yFTjLWf3bst3jLT6lfmq-z_o-mz/preview', title:'Record of Ragnarok T1 Cap 11' },
           "12": { link:'https://drive.google.com/file/d/1RCrQySivSpdkhHNf2gV2H9DF-q3d6Uyb/preview', title:'Record of Ragnarok T1 Cap 12' },
         },
         "2": {
@@ -2652,6 +2660,32 @@
           "15": { link:'https://drive.google.com/file/d/1Gl5syJlG4VU80XhdceaNmppURs5qR5aR/preview', title:'Record of Ragnarok T3 Cap 15' },
         }
       },
+      "63": {
+        "1": {
+          "1": { link:'https://drive.google.com/file/d/1O_l3Q-tAqbq_Fx8bPN53qWr7ygxCIWvP/preview', title:'Fischl x Slime – Una entrega especial' },
+          "2": { link:'https://drive.google.com/file/d/1Bq75jP0fgyTl99bXqJ7gJugyCJnhBCQV/preview', title:'Un Nuevo Hechizo de Mona' },
+          "3": { link:'https://drive.google.com/file/d/1sqbXLEuesuiCpIYrZ8Y7yZCo7y-qSFZP/preview', title:'Raiden x Yae – Zorro travieso' },
+          "4": { link:'https://drive.google.com/file/d/1jHWMWbGv4hOeWM5co8d0lJVl-1ajbi7d/preview', title:'Succubus HuTao – Una ganga' },
+          "5": { link:'https://drive.google.com/file/d/1teBT9rLTYHe2akCqrJG7SZ9MYFELd-KN/preview', title:'Keqing y Ganyu' },
+          "6": { link:'https://drive.google.com/file/d/1_YeoTOUQDxUB3V3rUoskgXTKzPiT2ZW9/preview', title:'No quiero un chupetín' },
+          "7": { link:'https://drive.google.com/file/d/1pe5CSrzUW5ijfXKmavcc7D-7SpWgg5my/preview', title:'Eula y Hilichurl' },
+          "8": { link:'https://drive.google.com/file/d/1PNQV3elJWnAARwYPM0C3eAfVtLza0dCN/preview', title:'Ganyu Solo – Deseos de Lavanda' },
+          "9": { link:'https://drive.google.com/file/d/1R0L_sbch-7aFxJ-Yt9Q-uai-QnwRc792/preview', title:'Keqing ♡ Tentáculos de limo' },
+          "10": { link:'https://drive.google.com/file/d/1vb10aHg3d0vcjt2jqkiMJD7fsX-O6-ix/preview', title:'Hutao X Slime Vicineko Limo' },
+          "11": { link:'https://drive.google.com/file/d/1We7LXBKqfJjJWfc1tIQ-s2hUApgvwn8l/preview', title:'Melodía' },
+          "12": { link:'https://drive.google.com/file/d/1OIshtdBFyL8Bf1n-YRkItDT5PE8rT306/preview', title:'Luciérnaga ¡déjame Entrar!' },
+          "13": { link:'https://drive.google.com/file/d/1WszFxUCkgovxKJWDocGXS7SCRJCP3WGj/preview', title:'Yelan' },
+          "14": { link:'https://drive.google.com/file/d/1xJQdoFTW-fLCHVmxxv4JDLWGILqdU3a7/preview', title:'Keqing y Ganyu 2' },
+          "15": { link:'https://drive.google.com/file/d/1-P261LACDkmmn5HEh-jlUevL4Kfwn9j_/preview', title:'Mona Del Lago' },
+          "16": { link:'https://drive.google.com/file/d/1FuPJWWPctDFPNGASUWB4rC6kA6cSXiYs/preview', title:'Yoimiya X Beat' },
+          "17": { link:'https://drive.google.com/file/d/1DBib63lFs6MEXw2flAUY0kKyb6Nd1z_0/preview', title:'Furina x HuTao – Un sabor diabólico del cielo' },
+          "18": { link:'https://drive.google.com/file/d/1Xejef_qaK9xVoNk8FHWV6Tik-qGcDARX/preview', title:'Riel estrella Honkai' },
+          "19": { link:'https://drive.google.com/file/d/1fZjbN7km1NbPcTj7fubJ8zAqfIJiw4_N/preview', title:'Una noche en Mondstadt Un accidente feliz' },
+          "20": { link:'https://drive.google.com/file/d/1sX90WFtMWV9yKV2LUq8JPIlAZqiUs6wq/preview', title:'Festival de Mondstadt' },
+        }
+      },
+
+
 
 
 
